--- a/app/src/main/res/drawable/button_play.xml
+++ b/app/src/main/res/drawable/button_play.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/ic_play_arrow_black_24dp"
+    <item android:drawable="@drawable/ic_play_playerbar"
           android:state_checked="true" />
 
-    <item android:drawable="@drawable/ic_pause_black_24dp"
+    <item android:drawable="@drawable/ic_pause_playerbar"
           android:state_checked="false"/>
 </selector>
