--- a/app/src/main/res/drawable/ic_previous_playerbar.xml
+++ b/app/src/main/res/drawable/ic_previous_playerbar.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="24.0" android:viewportWidth="24.0" android:width="24dp">
-    <path android:fillColor="#000000" android:pathData="M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z"/>
+    <path android:fillColor="@color/meta_dunkelblau" android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z"/>
 </vector>
