--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="meta_duenkelerblau">#182E46</color>
     <color name="meta_kontrast"> #334B6A</color>
     <color name="meta_orange">#CC6427</color>
+    
+    <color name="material_disabled">#61000000</color>
 
 </resources>
