added more-layout, added buttons, added button functionality

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>>
+<resources>
 
     <color name="meta_dunkelblau">#1C3654</color>
     <color name="meta_duenkelerblau">#182E46</color>
-    <color name="meta_kontrast"> #334B6A</color>
+    <color name="meta_kontrast">#334B6A</color>
     <color name="meta_orange">#CC6427</color>
-    
-    <color name="material_disabled">#61000000</color>
+
+    <color name="md_disabled">#61000000</color>
+
+    <color name="md_grey_50">#FAFAFA</color>
+    <color name="md_grey_100">#F5F5F5</color>
+
+    <color name="md_blue_grey_100">#CFD8DC</color>
 
 </resources>
