--- a/app/src/main/res/drawable/background_circle_blue.xml
+++ b/app/src/main/res/drawable/background_circle_blue.xml
@@ -2,7 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-
     <solid
-        android:color="@android:color/white"/>
+        android:color="@color/meta_dunkelblau"/>
 </shape>
