--- a/app/src/main/res/drawable/background_circle_blue_ripple.xml
+++ b/app/src/main/res/drawable/background_circle_blue_ripple.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@android:color/black">
-    <item android:drawable="@drawable/background_circle_white"></item>
+    android:color="@color/meta_kontrast" >
+    <item android:drawable="@drawable/background_circle_blue"/>
 </ripple>
