added playerbar fragments, added clear playlist layout

--- a/app/src/main/res/layout/activity_content_screeninvader.xml
+++ b/app/src/main/res/layout/activity_content_screeninvader.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="216dp"
+        android:layout_height="218dp"
         android:elevation="12dp"
         android:translationY="144dp">
 
@@ -22,7 +22,7 @@
             android:progressTint="@color/meta_orange"
             android:id="@+id/playerbar_progressbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="2dp"
             android:layout_gravity="bottom"
             android:indeterminate="true"
             app:mpb_progressStyle="horizontal"
@@ -30,71 +30,71 @@
             app:mpb_showTrack="false"
             style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal.NoPadding" />
 
+        <RelativeLayout
+            android:elevation="4dp"
+            android:id="@+id/playerbar"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:background="@color/md_grey_100"
+            android:outlineProvider="bounds">
+
+            <ImageButton
+                android:id="@+id/playerbar_button_play"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_pause_playerbar"
+                android:background="@drawable/background_circle_blue_ripple"
+                android:theme="@style/CustomFloatingActionButtonTheme"/>
+
+
+            <ImageButton
+                android:id="@+id/playerbar_button_previous"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_previous_playerbar"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:layout_toLeftOf="@id/playerbar_button_play"/>
+
+            <ImageButton
+                android:id="@+id/playerbar_button_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_next_playerbar"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:layout_toRightOf="@id/playerbar_button_play"/>
+
             <RelativeLayout
-                android:elevation="4dp"
-                android:id="@+id/playerbar"
                 android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:background="@color/md_grey_100"
-                android:outlineProvider="bounds">
+                android:layout_height="match_parent"
+                android:layout_toLeftOf="@id/playerbar_button_previous">
 
-                    <ImageButton
-                        android:id="@+id/playerbar_button_play"
-                        android:layout_width="56dp"
-                        android:layout_height="56dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_pause_playerbar"
-                        android:background="@drawable/background_circle_blue_ripple"
-                        android:theme="@style/CustomFloatingActionButtonTheme"/>
+                <ImageButton
+                    android:id="@+id/playerbar_button_shuffle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_shuffle_playerbar"
+                    android:background="?attr/selectableItemBackgroundBorderless"/>
+            </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/playerbar_button_next">
 
-                    <ImageButton
-                        android:id="@+id/playerbar_button_previous"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_previous_playerbar"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:layout_toLeftOf="@id/playerbar_button_play"/>
-
-                    <ImageButton
-                        android:id="@+id/playerbar_button_next"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_next_playerbar"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:layout_toRightOf="@id/playerbar_button_play"/>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_toLeftOf="@id/playerbar_button_previous">
-
-                    <ImageButton
-                        android:id="@+id/playerbar_button_shuffle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_shuffle_playerbar"
-                        android:background="?attr/selectableItemBackgroundBorderless"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/playerbar_button_next">
-
-                    <ImageButton
-                        android:id="@+id/playerbar_button_more"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_more_playerbar"
-                        android:background="?attr/selectableItemBackgroundBorderless"/>
-                </RelativeLayout>
+                <ImageButton
+                    android:id="@+id/playerbar_button_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_more_playerbar"
+                    android:background="?attr/selectableItemBackgroundBorderless"/>
+            </RelativeLayout>
 
             </RelativeLayout>
 
@@ -118,75 +118,12 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="-12dp"/>
         </LinearLayout>
-        <LinearLayout
+
+        <FrameLayout
+            android:id="@+id/playerbar_fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:padding="20dp">
+            android:layout_height="72dp">
 
-            <RelativeLayout
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1">
-                <ImageButton
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:id="@+id/playerbar_button_replay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_replay_playerbar"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1">
-                <ImageButton
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:id="@+id/playerbar_button_torrents"
-                    android:layout_gravity="center_vertical"
-                    android:layout_centerHorizontal="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_torrent_playerbar"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1">
-                <ImageButton
-                    android:layout_centerHorizontal="true"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:id="@+id/playerbar_button_browser"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_browser_playerbar"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1">
-                <ImageButton
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:id="@+id/playerbar_button_airplay"
-                    android:layout_centerHorizontal="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_airplay_playerbar"/>
-                </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1">
-                <ImageButton
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:id="@+id/playerbar_button_clear_playlist"
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_delete_playerbar"/>
-            </RelativeLayout>
-        </LinearLayout>
+        </FrameLayout>
     </LinearLayout>
 </RelativeLayout>
